--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,6 +12,7 @@
 </head>
 <!-- donde vamos a trabajar y escribir la gran mayoria del codigo-->
 <body>
+    <a href="paginas/contacto.html">Ir a contacto</a>
     <!-- h1{Item $}*6     -->
     <h1>Item 1</h1>
     <h2>Item 2</h2>
