--- a/HTML/05-enlaces.html
+++ b/HTML/05-enlaces.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enlaces</title>
+
+<!-- Enlaces favicon -->
+<link rel="icon" href="favicon.png">
+<!-- hojas de estilo -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
+<!-- <link rel="stylesheet" href="css/style.css"> -->
+<!-- <script src="js/main.js"></script> -->
+<!-- Javascript -->
+
 </head>
 <body>
     <h1>Enlaces</h1>
