--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,6 +9,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titulo</title>
+    <meta property="og:title" content="curso Html5 " />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
+<meta property="og:image" content="http://127.0.0.1:5500/Sripts/HTML/logo-html.jpg" />
+<meta property="og:description"  content="Practicando html mintic." />
 </head>
 <!-- donde vamos a trabajar y escribir la gran mayoria del codigo-->
 <body>
